add media query

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="main">
         <nav>
             <span>
-                <img src="logo.svg" alt="logo" />
+                <img class="logo" src="logo.svg" alt="logo" />
             </span>
             <span>
                 <button class="but1">English</button>
@@ -28,7 +28,7 @@
             <span>more</span>
             <span class="small sm1">Starts at ₹149. Cancel at any time.</span>
             <span class="small">Ready to watch? Enter your email to create or restart your membership.</span>
-            <div class=>
+            <div class="btn-container">
                 <input type="text" class="but3" placeholder="Email Address">
                 <button class="but4">Get Started &gt;</button>
             </div>
@@ -68,8 +68,10 @@
         <div class="footer">
              <span class="small">Ready to watch? Enter your email to create or restart your membership.</span>
             <div>
+              <div class="btn-container">
                 <input type="text" class="but3" placeholder="Email Address">
                 <button class="but4">Get Started &gt;</button>
+                </div>
             </div>
              </div>
             <footer class="custom-footer">
