--- a/index.html
+++ b/index.html
@@ -2,118 +2,186 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Netflix India-Watch TV shows Online</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Netflix India-Watch TV shows Online</title>
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 </head>
 
 <body>
-    <div class="main">
-        <nav>
-            <span>
-                <img class="logo" src="logo.svg" alt="logo" />
-            </span>
-            <span>
-                <button class="but1">English</button>
-                <button class="but2">Sign In</button>
-            </span>
+  <div class="main">
+    <nav>
+      <span>
+        <img class="logo" src="logo.svg" alt="logo" />
+      </span>
+      <span>
+        <button class="but1">English</button>
+        <button class="but2">Sign In</button>
+      </span>
 
-        </nav>
-        <div class="box"></div>
-        <div class="vignette"></div>
-        <div class="text">
-            <span>Unlimited movies,</span>
-            <span>TV shows and</span>
-            <span>more</span>
-            <span class="small sm1">Starts at ₹149. Cancel at any time.</span>
-            <span class="small">Ready to watch? Enter your email to create or restart your membership.</span>
-            <div class="btn-container">
-                <input type="text" class="but3" placeholder="Email Address">
-                <button class="but4">Get Started &gt;</button>
-            </div>
-        </div>
-        <div class="line"></div>
-        <div class="text-1">Trending Now</div>
-        <div class="gridbox">
-       <div class="grid">
-        <div class="grid-items"><img src="https://occ-0-3777-2186.1.nflxso.net/dnm/api/v6/mAcAr9TxZIVbINe88xb3Teg5_OA/AAAABViqdtr9ZatqPa3P9T418vFq3iq4Ma4x1JUNFKxbIS5dPSoG_5VkNoEKXKBODntJNx_mCT_z0fcGegToBNEHLaVr3qyqSGDY67I.jpg?r=062"></div>
-        <div class="grid-items"><img src= "https://occ-0-3777-2186.1.nflxso.net/dnm/api/v6/mAcAr9TxZIVbINe88xb3Teg5_OA/AAAABWS-EyoFBa-Svry6VvSCb6i3SN_WT20j-Iy5uiKWKH9rNk9qGhr97KLX_so6qg-EGRk5kyuXamvO6bwxx_DptuTt_iIGWIAxkoA.jpg?r=c23"></div>
-        <div class="grid-items"><img src="https://occ-0-3777-2186.1.nflxso.net/dnm/api/v6/mAcAr9TxZIVbINe88xb3Teg5_OA/AAAABZ1lf1ET51x4CpItBKJ7abtNFyPfyxfTEl6N_zbQTMloiysWRBpzpK1h1YdCvoh-yxnRUiblkT5byWwwK41e_R4foRGE_ibm8YMWhp1snHf0I9thMUYGhpgLC7WCLffauO1v.jpg?r=a1c"></div>
-        <div class="grid-items"><img src="https://occ-0-3777-2186.1.nflxso.net/dnm/api/v6/mAcAr9TxZIVbINe88xb3Teg5_OA/AAAABQ2lygENQ58jdDOXRdp6rTzib_Z5wBhfVumcN0GiI0PSsb8A7v_bEqis_Rm1Y_b0OrWxc3Qjv9nOUCHAhzMXdtuKul3FzbWWLFsZc9O5Vx6PcHuXpJmM7VtVr2Enrtvw2XjR.jpg?r=63b"></div>
-        <div class="grid-items"><img src="https://occ-0-3777-2186.1.nflxso.net/dnm/api/v6/mAcAr9TxZIVbINe88xb3Teg5_OA/AAAABV5rwf2fuYX2i-sYcG48oLpkL_dI0wXwdPApVds-33GmNPAx5AY1hwmOBuEzvSw4lP2jJt4gai_uX7vG87sq-4P-7zmtxCMw290.jpg?r=cc2"></div>
-       </div>
-       </div>
-        <div class="faqbox">
-           <h2>Frequently Asked Questions</h2>
-           <div class="hero">
-            What is Netflix?
-           </div>
-           <div class="hero">
-          How much does Netflix cost?
-           </div>
-           <div class="hero">
-            Where can I watch?
-           </div>
-           <div class="hero">
-            How do I cancel?
-           </div>
-           <div class="hero">
-            What can I watch on Netflix?
-           </div>
-           <div class="hero">
-            Is Netflix good for Kids?
-           </div>
-        </div>
-        <div class="footer">
-             <span class="small">Ready to watch? Enter your email to create or restart your membership.</span>
-            <div>
-              <div class="btn-container">
-                <input type="text" class="but3" placeholder="Email Address">
-                <button class="but4">Get Started &gt;</button>
-                </div>
-            </div>
-             </div>
-            <footer class="custom-footer">
-  <div class="custom-footer-top">
-    <a href="#">Questions? Call 000-800-919-1743</a>
-  </div>
-
-  <div class="custom-footer-links">
-    <ul>
-      <li><a href="#">FAQ</a></li>
-      <li><a href="#">Investor Relations</a></li>
-      <li><a href="#">Privacy</a></li>
-      <li><a href="#">Speed Test</a></li>
-    </ul>
-    <ul>
-      <li><a href="#">Help Centre</a></li>
-      <li><a href="#">Jobs</a></li>
-      <li><a href="#">Cookie Preferences</a></li>
-      <li><a href="#">Legal Notices</a></li>
-    </ul>
-    <ul>
-      <li><a href="#">Account</a></li>
-      <li><a href="#">Ways to Watch</a></li>
-      <li><a href="#">Corporate Information</a></li>
-      <li><a href="#">Only on Netflix</a></li>
-    </ul>
-    <ul>
-      <li><a href="#">Media Centre</a></li>
-      <li><a href="#">Terms of Use</a></li>
-      <li><a href="#">Contact Us</a></li>
-    </ul>
-  </div>
-
-  <div class="custom-footer-bottom">
-    <select class="language-dropdown">
-      <option value="en">🌐 English</option>
-    </select>
-    <p>Netflix India</p>
-    <small>This page is protected by Google reCAPTCHA to ensure you're not a bot. <a href="#">Learn more.</a></small>
-  </div>
-</footer>
+    </nav>
+    <div class="box"></div>
+    <div class="vignette"></div>
+    <div class="text">
+      <span>Unlimited movies,</span>
+      <span>TV shows and</span>
+      <span>more</span>
+      <span class="small sm1">Starts at ₹149. Cancel at any time.</span>
+      <span class="small">Ready to watch? Enter your email to create or restart your membership.</span>
+      <div class="btn-container">
+        <input type="text" class="but3" placeholder="Email Address">
+        <button class="but4">Get Started &gt;</button>
+      </div>
     </div>
+    <div class="line"></div>
+    <div class="text-1">Trending Now</div>
+    <div class="container-wrapper">
+    <div class="container swiper">
+      <div class="movie-wrapper">
+       
+        <ul class="movie-list swiper-wrapper">
+          <li class="movie-item swiper-slide">
+            <a href="#" class="movie-link">
+              <img
+                src="https://occ-0-3777-2186.1.nflxso.net/dnm/api/v6/mAcAr9TxZIVbINe88xb3Teg5_OA/AAAABaW57jWqw0Gs9gqgmW816THwyNfPqphIiruQRFy9KXtt9PTPJpB4kzDKriPcpNjPKCj0itu1Yfjl-CR8rGEokBHPKE4O9lZQHXHRRpUHEelwoKk8lOf4gqlws-HnR2iZeSk4.webp?r=609">
+            </a>
+          </li>
+          <li class="movie-item swiper-slide">
+            <div class="movie-link">
+              <img
+                src="https://occ-0-3777-2186.1.nflxso.net/dnm/api/v6/mAcAr9TxZIVbINe88xb3Teg5_OA/AAAABbseCvMwOHdHL3P32GIeSthQVIKkmQmnbNu_wbWHMBPYCqoED7aOFGjfEz3Uiwpk0rQ3jmRUL0B2ybbso3_rWM5eC6nhyAN7gGBexVG4geRDPKaSImz8A9a7_cun7cT8fTeQ.webp?r=817">
+            </div>
+          </li>
+          <li class="movie-item swiper-slide">
+            <a href="#" class="movie-link">
+              <img
+                src="https://occ-0-3777-2186.1.nflxso.net/dnm/api/v6/mAcAr9TxZIVbINe88xb3Teg5_OA/AAAABVVzJ7Q5ewWWr7Ju9Vpu5gUq1Guy_hTrvChxJceb-sKqWPiIs1YGHsy_iC2mNT5bKs2BepshCHriwd7IQhYM2HPuqd7MBfqMXFL8nXJshtQEi6-KAKZAcSvG7xE3daK4ABuC.webp?r=81a">
+            </a>
+          </li>
+          <li class="movie-item swiper-slide">
+            <a href="#" class="movie-link">
+              <img
+                src="https://occ-0-3777-2186.1.nflxso.net/dnm/api/v6/mAcAr9TxZIVbINe88xb3Teg5_OA/AAAABace3lfDYdvDP5GhS8n6Djz3jW0sjZtFLOYIGR9fQQS48CE1DC8PQ8-DlTy5qKPDPjeQcfX7AVJzFKz2zW2lsbUq5yiYN0g1NmTRk6F4dajOtAdVKLn_bBW6tGbQr22e74Mx.webp?r=fb9">
+            </a>
+          </li>
+          <li class="movie-item swiper-slide">
+            <a href="#" class="movie-link">
+              <img
+                src="https://occ-0-3777-2186.1.nflxso.net/dnm/api/v6/mAcAr9TxZIVbINe88xb3Teg5_OA/AAAABSHNwJsOPLn-zXmriSsMdIZu5SHvU23Zt_cR9Lv6NQ-SwnYZ00Zs2X1vdf4mQlh3i0Yy-jviXH5obaewQ09TgMrL5pajUnJ6Orw.webp?r=98c">
+            </a>
+          </li>
+          <li class="movie-item swiper-slide">
+            <a href="#" class="movie-link">
+              <img
+                src="https://occ-0-3777-2186.1.nflxso.net/dnm/api/v6/mAcAr9TxZIVbINe88xb3Teg5_OA/AAAABZbQAKTfje7iQmjz3CDN2alSCzni4DeWCOuz8d5BeFa6y54-GhoZbril-cVcwd4xm4iPvaQ1H8ier30PDrbx7RP6ypxPyAPuZPE.webp?r=226">
+            </a>
+          </li>
+          <li class="movie-item swiper-slide">
+            <a href="#" class="movie-link">
+              <img
+                src="https://occ-0-3777-2186.1.nflxso.net/dnm/api/v6/mAcAr9TxZIVbINe88xb3Teg5_OA/AAAABU73BvQjJgydQFEJ-vZZw9QtO8fL6lIxc71x9tOqxgDWh_BHokCWPIbGC5AxJjDk0D_sIH5KhmmYm9HLr3DKUXg8eo6nzF0rtSI.webp?r=d95">
+            </a>
+          </li>
+          <li class="movie-item swiper-slide">
+            <a href="#" class="movie-link">
+              <img
+                src="https://occ-0-3777-2186.1.nflxso.net/dnm/api/v6/mAcAr9TxZIVbINe88xb3Teg5_OA/AAAABYUCgDPIk4LvnEw_j-dC5ca65oxm4yP2Z7RFKlRcN6WYzCwNA4MhTNqTRrSAK9zND3cSjrYEpbQculmTCXPD09ZbvdCosdbuOjc.webp?r=062">
+            </a>
+          </li>
+          <li class="movie-item swiper-slide">
+            <a href="#" class="movie-link">
+              <img
+                src="https://occ-0-3777-2186.1.nflxso.net/dnm/api/v6/mAcAr9TxZIVbINe88xb3Teg5_OA/AAAABYGL4_ns5MGTE5-Yd3ZQVB5apyY9yxQ39lxjT_27ehdoGzrxRwNc4osgXEeifcv9yO_MgMySL-p6hMxtQZnIEkZmyglIJ7wm7ik.webp?r=c23">
+            </a>
+          </li>
+          <li class="movie-item swiper-slide">
+            <a href="#" class="movie-link">
+              <img
+                src="https://occ-0-3777-2186.1.nflxso.net/dnm/api/v6/mAcAr9TxZIVbINe88xb3Teg5_OA/AAAABYgU_JT_R8YmC7u-AOOHD7K8MKnmJGnqEzY50hZsaYInpygLnCkqXX8GhvPNaffNrkaLGfzdL4ZmhNVluUplzP_rlB6mYLv1zdU.webp?r=923">
+            </a>
+          </li>
+        </ul>
+     
+        <div class="swiper-pagination"></div>
+        <div class="swiper-button-prev"></div>
+        <div class="swiper-button-next"></div>
+       </div>
+    </div>
+    </div>
+    <div class="faqbox">
+      <h2>Frequently Asked Questions</h2>
+      <div class="hero">
+        What is Netflix?
+      </div>
+      <div class="hero">
+        How much does Netflix cost?
+      </div>
+      <div class="hero">
+        Where can I watch?
+      </div>
+      <div class="hero">
+        How do I cancel?
+      </div>
+      <div class="hero">
+        What can I watch on Netflix?
+      </div>
+      <div class="hero">
+        Is Netflix good for Kids?
+      </div>
+    <div class="footer">
+      <span class="small">Ready to watch? Enter your email to create or restart your membership.</span>
+      <div>
+        <div class="btn-container">
+          <input type="text" class="but3" placeholder="Email Address">
+          <button class="but4">Get Started &gt;</button>
+        </div>
+      </div>
+    </div>
+    <footer class="custom-footer">
+      <div class="custom-footer-top">
+        <a href="#">Questions? Call 000-800-919-1743</a>
+      </div>
+
+      <div class="custom-footer-links">
+        <ul>
+          <li><a href="#">FAQ</a></li>
+          <li><a href="#">Investor Relations</a></li>
+          <li><a href="#">Privacy</a></li>
+          <li><a href="#">Speed Test</a></li>
+        </ul>
+        <ul>
+          <li><a href="#">Help Centre</a></li>
+          <li><a href="#">Jobs</a></li>
+          <li><a href="#">Cookie Preferences</a></li>
+          <li><a href="#">Legal Notices</a></li>
+        </ul>
+        <ul>
+          <li><a href="#">Account</a></li>
+          <li><a href="#">Ways to Watch</a></li>
+          <li><a href="#">Corporate Information</a></li>
+          <li><a href="#">Only on Netflix</a></li>
+        </ul>
+        <ul>
+          <li><a href="#">Media Centre</a></li>
+          <li><a href="#">Terms of Use</a></li>
+          <li><a href="#">Contact Us</a></li>
+        </ul>
+      </div>
+      </div>
+      <div class="footer-bottom">
+        <select class="language">
+          <option value="en">🌐 English</option>
+        </select>
+        <p>Netflix India</p>
+        <small>This page is protected by Google reCAPTCHA to ensure you're not a bot. <a href="#">Learn
+            more.</a></small>
+      </div>
+    </footer>
+  </div>
+  <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+  <script src="script.js"></script>
+  
 </body>
 
 </html>
