--- a/index.html
+++ b/index.html
@@ -34,25 +34,22 @@
         <input type="text" class="but3" placeholder="Email Address">
         <button class="but4 four">Get Started &gt;</button>
       </div>
-    
-    <div class="line"></div>
-     <div class="netflix-divider">
-  <svg viewBox="0 0 1440 200" preserveAspectRatio="none">
-    <defs>
-      <linearGradient id="netflixGradient" x1="0%" y1="0%" x2="100%" y2="0%">
-        <stop offset="0%" stop-color="#e50914" />
-        <stop offset="50%" stop-color="#ff006a" />
-        <stop offset="100%" stop-color="#ff6ec4" />
-      </linearGradient>
-    </defs>
-    <path d="M0,200 Q720,-100 1440,200"
-          stroke="url(#netflixGradient)"
-          stroke-width="15"
-          fill="none"
-          class="netflix-path" />
-  </svg>
-</div>
-</div>
+
+      <div class="line"></div>
+      <div class="netflix-divider">
+        <svg viewBox="0 0 1440 200" preserveAspectRatio="none">
+          <defs>
+            <linearGradient id="netflixGradient" x1="0%" y1="0%" x2="100%" y2="0%">
+              <stop offset="0%" stop-color="#e50914" />
+              <stop offset="50%" stop-color="#ff006a" />
+              <stop offset="100%" stop-color="#ff6ec4" />
+            </linearGradient>
+          </defs>
+          <path d="M0,200 Q720,-100 1440,200" stroke="url(#netflixGradient)" stroke-width="15" fill="none"
+            class="netflix-path" />
+        </svg>
+      </div>
+    </div>
 
     <div class="text-1">Trending Now</div>
 
@@ -123,14 +120,26 @@
               </a>
             </li>
           </ul>
+
           <div class="swiper-pagination"></div>
           <div class="swiper-button-prev"></div>
           <div class="swiper-button-next"></div>
         </div>
       </div>
     </div>
-  <div class="faqbox">
-      <div class="faq"><h2>Frequently Asked Questions</h2></div>
+    <div class="reason-wrapper">
+      <h2>More reasons to join</h2>
+      <div class="reason">
+        <div class="reason-cards"></div>
+        <div class="reason-cards"></div>
+        <div class="reason-cards"></div>
+        <div class="reason-cards"></div>
+      </div>
+    </div>
+    <div class="faqbox">
+      <div class="faq">
+        <h2>Frequently Asked Questions</h2>
+      </div>
       <div class="hero">
         What is Netflix?
         <div class="plus">+</div>
@@ -155,9 +164,9 @@
         Is Netflix good for Kids?
         <div class="plus">+</div>
       </div>
-      
+
       <div class="footer">
-        <span class="small">Ready to watch? Enter your email to create or restart your membership.</span>
+        <span class="small sm2">Ready to watch? Enter your email to create or restart your membership.</span>
         <div>
           <div class="btn-container">
             <input type="text" class="but3" placeholder="Email Address">
