--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         </div>
       </div>
     </div>
-    <div class="reason-wrapper">
+    <!-- <div class="reason-wrapper">
       <h2>More reasons to join</h2>
       <div class="reason">
         <div class="reason-cards"></div>
@@ -135,7 +135,7 @@
         <div class="reason-cards"></div>
         <div class="reason-cards"></div>
       </div>
-    </div>
+    </div> -->
     <div class="faqbox">
       <div class="faq">
         <h2>Frequently Asked Questions</h2>
